# codon-usage

./: .gitignore  LICENSE  README.md  pyproject.toml  run_codon_usage.py
example_data/: cog04044.cds.fasta  cog04046.cds.fasta
notebooks/: 01_quickstart_codon_usage.ipynb
src/codon_usage/: __init__.py  analysis.py  parsing.py
tests/: test_basic_pipeline.py
